# rustEncodeDecode

./: Cargo.toml
rs_encoder/: Cargo.toml
rs_encoder/src/: base32.rs  base64.rs  base85.rs  lib.rs
src/: main.rs
