[package]
name = "rs_encoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
phf = {version = "0.11", features = ["macros"]}
bitvec = "1"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"

